# checkmate

./: README.md  async_test.html  package-lock.json  package.json  tsconfig.json
example_pgns/: 500_elo.pgn  stockfish_v_stockfish.pgn
public/resources/data/: openings.json
src/: App.svelte  stockfish.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  stockfish.rs
src/components/: ChessBoard.svelte  MatchSummary.svelte  Modal.svelte  MoveFeedback.svelte  Timeline.svelte
src/components/board/: EvalBar.svelte  PieceComponent.svelte
src/components/modals/: GameReview.svelte  Upload.svelte
src/lib/: stockfish.ts  util.ts
src/lib/chess/: board.ts  chess_interface.ts  game_review.ts  stockfish.ts  util.ts
src/lib/ui/: assets.ts  modal_manager.ts
src/routes/: +page.svelte
